--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -89,6 +89,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Deep-drilling-in-the-time-domain-with-DECam:-Survey-characterization\n",
+      "SUCESSFULLY PARSED 2022MNRAS.tmp.3146G: \" {Deep drilling in the time domain with DECam: Survey charact ... \"\n",
+      "Updated-orbital-monitoring-and-dynamical-masses-for-nearby-M-dwarf-binaries\n",
+      "SUCESSFULLY PARSED 2022A&A...666A..16C: \" {Updated orbital monitoring and dynamical masses for nearby  ... \"\n",
+      "Physical-properties-of-near-Earth-asteroid-(2102)-Tantalus-from-multiwavelength-observations\n",
+      "SUCESSFULLY PARSED 2022MNRAS.515.4551R: \" {Physical properties of near-Earth asteroid (2102) Tantalus  ... \"\n",
+      "A-search-for-transit-timing-variations-in-the-HATS-18-planetary-system\n",
+      "SUCESSFULLY PARSED 2022MNRAS.515.3212S: \" {A search for transit timing variations in the HATS-18 plane ... \"\n",
+      "Near-infrared-and-optical-emission-of-WASP-5-b\n",
+      "SUCESSFULLY PARSED 2022A&A...664A..47K: \" {Near-infrared and optical emission of WASP-5 b}  \"\n",
+      "A-Possible-Alignment-Between-the-Orbits-of-Planetary-Systems-and-their-Visual-Binary-Companions\n",
+      "SUCESSFULLY PARSED 2022AJ....163..207C: \" {A Possible Alignment Between the Orbits of Planetary System ... \"\n",
       "HATS-74Ab,-HATS-75b,-HATS-76b,-and-HATS-77b:-Four-Transiting-Giant-Planets-Around-K-and-M-Dwarfs\n",
       "SUCESSFULLY PARSED 2022AJ....163..125J: \" {HATS-74Ab, HATS-75b, HATS-76b, and HATS-77b: Four Transitin ... \"\n",
       "TOI-1842b:-A-Transiting-Warm-Saturn-Undergoing-Reinflation-around-an-Evolving-Subgiant\n",
